package com.tetras.application;

public interface Triathlete {
    void faireUnTriathlon();

    int getDistanceParcourueEnMetre();
}