@startuml Adapter

package com.tetras.librarie #DDDDDD {
    class Canard {
        - distanceEnMetre: int
        + nager(distanceEnMetre: int): void  
        + voler(distanceEnMetre: int): void  
        + marcher(distanceEnMetre: int): void
        + getDistanceParcourueEnMetre(): int
    }
}

package com.tetras.application {
    interface Triathlete {
        + faireUnTriathlon(): void
    }
    class Humain {

    } 
    class CanardToTriathleteAdapter {
    } 
    class Organisateur 

    Humain ..|> Triathlete
    CanardToTriathleteAdapter ..|> Triathlete    
    CanardToTriathleteAdapter *-- Canard

    Organisateur ..> Triathlete : uses
}

@enduml